--- a/src/css/App.css
+++ b/src/css/App.css
@@ -146,3 +146,11 @@ form span {
   margin-left: 30px;
   margin-top: 10px;
 }
+
+.error{
+  margin-top: 2px;
+  /* margin-bottom: 4px; */
+  position:absolute;
+  color: red;
+  font-size: .8rem;
+}
